--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <script src="keyboarder.js"></script>
+  <title>Capture the Flag</title>
+  <link rel="stylesheet" href="style.css">
+  <script src ="script.js" defer></script>
 </head>
 <body>
-  
+  <div class="canvasDiv">
+    <canvas id="capture-the-flag" width="500" height="500"></canvas>
+  </div> 
 </body>
 </html>
