made the game horizontal

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <script src ="script.js" defer></script>
 </head>
 <body>
+  <header>
+    <h1>Capture the Blue Flag</h1>
+  </header>
   <div class="canvasDiv">
-    <canvas id="capture-the-flag" width="500" height="500"></canvas>
+    <canvas id="capture-the-flag" width="1000" height="500"></canvas>
   </div> 
 </body>
 </html>
