2 bugs - ghosts can kill flag and flag can kill me after I grab it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Capture the Blue Flag</h1>
+    <h1>Dance of the Ghosties</h1>
   </header>
   <div class="canvasDiv">
     <canvas id="capture-the-flag" width="1000" height="500"></canvas>
